# PASTA-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exp.sh  exp_compare.sh  exp_cudaflow_partition.sh
examples/: CMakeLists.txt  cudaflow_partition.cpp  exp.cpp  incre.cpp  incre_cudaflow_partition.cpp  incre_cudaflow_partition_incremental.cpp  incre_semaphore.cpp  manual.cpp  mis.cpp  run.cpp  semaphore.cpp  simple.cpp
pasta/: ]  pasta.cpp  pasta.hpp
unittests/: CMakeLists.txt  check_cudaflow_partition.cpp  check_incre_cudaflow_partition.cpp
